[package]
name = "ff-carl"
version = "0.1.0"
edition = "2021"
description = """
A simple utility library to automate Firefox' ClientAuthRememberList.bin mTLS host:certificate assignment.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.7"
byteorder = "1"
x509-parser = "0.15.1"
