[package]
name = "ff-carl"
version = "1.0.2"
edition = "2021"
license = "MPL-2.0"
description = """
A simple utility library to automate Firefox' mTLS host:certificate assignment (ClientAuthRememberList.bin) file.
"""
repository = "https://github.com/andrewoswald/ff-carl"
readme = "README.md"
keywords = ["firefox", "mtls", "pkcs11", "certificate", "x509"]
categories = ["authentication", "config", "filesystem", "network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.7"
byteorder = "1"
x509-parser = "0.15.1"
